Made mustaches build method pay attention to case used for input files in config file

--- a/test/dummy/mustaches.yml.tml
+++ b/test/dummy/mustaches.yml.tml
@@ -4,5 +4,5 @@ templates:
     - Sample
     - Sample1
     - SampleFolder:
-      - Sample2:
-        - Sample2
+      - SampleFolderTest
+    - sample_with_underscore
