--- a/test/dummy/sass/dependencies/link_icons.scss
+++ b/test/dummy/sass/dependencies/link_icons.scss
@@ -1,13 +1,11 @@
-@import "blueprint/link-icons";
+@import "compass/utilities/sprites";
+@import "link_icons/*.png";
+@include all-link-icons-sprites;
 
 // This turns link icons on for all links. You can change the scoping selector from
 // body to something more specific if you prefer.
 body {
-  @include link-icons;
-  // Use this class if a link gets an icon when it shouldn't.
-  a.noicon {
-    @include no-link-icon; }
   // Not all links have a url structure that can be detected,
   // So you can set them explicitly yourself like so:
   a#this-is-a-pdf-link {
-    @include link-icon("pdf.png"); } }
+    @include link-icons-sprite(doc); } }
